// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept a custom name formatter 1`] = `
<ForwardRef>
  <p>
    The 'cool name' Report will be permanently deleted.
  </p>
  <p />
</ForwardRef>
`;

exports[`should show the confirmation modal when entity is set 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    title="Delete Report"
  />
  <ForwardRef>
    <p>
      The 'Doomed Report' Report will be permanently deleted.
    </p>
    <p />
  </ForwardRef>
  <ForwardRef(ModalFooter)>
    <Button
      className="close"
      disabled={false}
      kind="secondary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      kind="danger"
      onClick={[Function]}
    >
      Delete Report
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;

exports[`should use provided delete text for title and button 1`] = `
<Modal
  className="Deleter"
  onClose={[Function]}
  open={true}
>
  <ForwardRef(ModalHeader)
    title="Remove entity"
  />
  <ForwardRef>
    <p>
      The 'Doomed Report' Report will be permanently deleted.
    </p>
    <p />
  </ForwardRef>
  <ForwardRef(ModalFooter)>
    <Button
      className="close"
      disabled={false}
      kind="secondary"
      onClick={[Function]}
    >
      Cancel
    </Button>
    <Button
      className="confirm"
      disabled={false}
      kind="danger"
      onClick={[Function]}
    >
      Remove entity
    </Button>
  </ForwardRef(ModalFooter)>
</Modal>
`;
